added a11y bug fixes and instructions for how to update the component to work with assistive tech for sighted and non sighted users

--- a/src/choosin.css
+++ b/src/choosin.css
@@ -36,7 +36,9 @@
 }
 
 .choosin--hide {
-  opacity: 0.5;
+ /* opacity: 0.5; */
+ display: none; 
+ /* @todo: A11y note, the default select needs to be hidden visually and within the DOM */
 }
 
 .choosin--processed {
